<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
                          
    		<TextView
       				android:id="@+id/goSearch"
        			style="@style/SettingText"
        			android:layout_width="match_parent"
       				android:layout_height="56dp"
        			android:text="@string/player_menu_search"      			
        			android:onClick="onClick"
        			android:gravity="center_vertical" />               
                        
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/img_dot_line" />    
                            
    			<TextView
       				android:id="@+id/goMark"
        			style="@style/SettingText"
        			android:layout_width="match_parent"
       				android:layout_height="56dp"
        			android:text="@string/player_menu_bookmark"      			
        			android:onClick="onClick"
        			android:gravity="center_vertical" />               
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/img_dot_line" />                

    			<TextView
       				android:id="@+id/goPageMove"
        			style="@style/SettingText"
        			android:layout_width="match_parent"
       				android:layout_height="56dp"
        			android:text="@string/player_menu_movepage"      			
        			android:onClick="onClick"
        			android:gravity="center_vertical" />               
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/img_dot_line" />    
                
    			<TextView
       				android:id="@+id/goPercentMove"
        			style="@style/SettingText"
        			android:layout_width="match_parent"
       				android:layout_height="56dp"
        			android:text="@string/player_menu_movepercent"      			
        			android:onClick="onClick"
        			android:gravity="center_vertical" />               

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/img_dot_line" />

    			<TextView
       				android:id="@+id/goMemo"
        			style="@style/SettingText"
        			android:layout_width="match_parent"
       				android:layout_height="56dp"
        			android:text="@string/player_menu_memo" 
        			android:onClick="onClick"
        			android:gravity="center_vertical" />    

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/img_dot_line" />

    			<TextView
       				android:id="@+id/goSleepCheck"
        			style="@style/SettingText"
        			android:layout_width="match_parent"
       				android:layout_height="56dp"
        			android:text="@string/player_menu_sleep"        			
        			android:onClick="onClick"
        			android:gravity="center_vertical" />  

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/img_dot_line" />

    			<TextView
       				android:id="@+id/goSetting"
        			style="@style/SettingText"
        			android:layout_width="match_parent"
       				android:layout_height="56dp"
        			android:text="@string/player_menu_setting"    			
        			android:onClick="onClick"
        			android:gravity="center_vertical" /> 

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/img_dot_line" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>