<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:background="@color/color_header_bg"
	>

   <RelativeLayout
        android:id="@+id/layout_home_top"
        android:layout_width="match_parent"
        android:layout_height="45dp" >
        
       	<Button
            android:id="@+id/backBtn"
        	android:layout_width="wrap_content"
        	android:layout_height="40dp"
        	android:layout_alignParentLeft="true"
        	android:layout_centerVertical="true"
  		    android:drawableLeft="@drawable/arr_left_w"
	        android:gravity="center_vertical"
	        android:text="@string/common_exit"
	        android:contentDescription="@string/player_exit"	               
        	android:background="@null"
            android:onClick="onClick"
            android:textColor="@color/color_header_txt"
        	android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/backBtn"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/color_header_txt"
            android:textSize="20sp" />
        <Button
            android:id="@+id/playermenuBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_menu"
            android:contentDescription="@string/common_list_menu"
            android:onClick="onClick"
            android:visibility="visible" />       
    </RelativeLayout>
  
</RelativeLayout>